@@ -1,3 +1,8 @@
+2013-11-21  Niibe Yutaka  <gniibe@fsij.org>
+
+	* example-cdc/usb_stm32f103.c, example-cdc/usb_lld.h: Update from
+	Gnuk.
+
 2013-11-08  Niibe Yutaka  <gniibe@fsij.org>
 
 	* Version 0.03.
